--- a/2023/01/23.md
+++ b/2023/01/23.md
@@ -4,7 +4,7 @@
 - optparseについて
 # わかったこと
 - シンボルの使いかた。メソッド名として使用するRubyでは、メソッド名に文字列を使用する代わりに、シンボルを使用することで、メソッドの呼び出しを高速化することができる。頻繁に使用する場面ではシンボルを使用することで、処理速度を向上させることができつ。
-- 次やること指定したインデックスに対応するコマンドライン引数が存在しない場合は、nil を返す。
+- 指定したインデックスに対応するコマンドライン引数が存在しない場合は、nil を返す。
   optparseを使用することで、コマンドラインから渡されたオプションを効率的に解析することができる。
 # 次やること
 - DockerでRubyの開発環境構築課題修正
