--- a/2023/01/23.md
+++ b/2023/01/23.md
@@ -1,7 +1,7 @@
 # 取り組んだ課題
-- DockerでRubyの開発環境構築課題提出
-- Railsグループ分け問題
+- DockerでRubyの開発環境構築課題修正
 - optparseについて
+- カレンダー課題
 # わかったこと
 - シンボルの使いかた。メソッド名として使用するRubyでは、メソッド名に文字列を使用する代わりに、シンボルを使用することで、メソッドの呼び出しを高速化することができる。頻繁に使用する場面ではシンボルを使用することで、処理速度を向上させることができつ。
 - 指定したインデックスに対応するコマンドライン引数が存在しない場合は、nil を返す。
