--- a/02/7.md
+++ b/02/7.md
@@ -3,7 +3,7 @@
 # わかったこと
 - オブジェクト指向設計のポイントとして、メソッドを単一責任にする。１つのメソッドに複数の処理は書かない。
 - インスタンス変数は直接参照しない。@をつけて直接参照することは避けるべきとのこと。 理由は、もしここに修正が必要になったときに直接参照しているところがたくさんあると変更が困難になるため。
-- 隠せるメソッドは全部隠す。外部クラスからは参照せず、クラス内でしか参照しない場合はprivateを指定sる
+- 隠せるメソッドは全部隠す。外部クラスからは参照せず、クラス内でしか参照しない場合はprivateを指定する
 # 次やること
 - 自販機課題ステップ３
 # 学習時間
