--- a/2023/02/08.md
+++ b/2023/02/08.md
@@ -1,7 +1,7 @@
 # 取り組んだ課題
 - 自販機問題ステップ3~4
 # わかったこと
-- 一つの変数に一個のインスタンス変数しか格納できないかと思っていたが、ハッシュで管理して、配列にして値を更新、追加することができる
+- 一つの変数に一個のインスタンス変数しか格納できないかと思っていたが、ハッシュで管理して、配列にすることで複数のインスタンスを格納することができる
 - attr_readerでハッシュを指定すると他のクラスでも指定したハッシュが使える
 # 次やること
 - 自販機課題提出
