--- a/2023/02/20.md
+++ b/2023/02/20.md
@@ -2,7 +2,7 @@
 - railsインプット
 # わかったこと
 - 開発の流れはルーティング,コントローラー,ビュー
-- link_toで、<a href=~>というaタグに置き換わる
+- link_toで、hrefというaタグに置き換わる
 - 無駄なデータが登録されるのを防ぐためにvalidatesでルールを決める
 # 次やること
 - rails インプット
