--- a/2023/02/23.md
+++ b/2023/02/23.md
@@ -2,6 +2,7 @@
 - railsインプット
 # わかったこと
 - 共通化にはrenderメソッドのpartialオプションを使う。`locals: { task: @task }`と記述し明示的にローカル変数として渡すことで、インスタンス変数の定義に依存しない、再現性の高いパーシャルにすることができる。
+- アクションに続けてビューを表示させることはrenderにあたり、アクションを処理した直後にビューを表示せず、別のURLに案内することをリダイレクトと呼ぶ
 # 次やること
 - rails インプット
 # 学習時間
