--- a/2023/03/05.md
+++ b/2023/03/05.md
@@ -1,1 +1,12 @@
-
+# 取り組んだ課題
+- railsインプット
+- ECサイト　商品一覧機能修正
+-　　商品詳細機能作成
+# わかったこと
+- resourceでonlyを使ってルートを絞ることができる
+- linl_to　でimageとnameをdo endで囲むことでリンク詳細リンクを作成できる
+# 次やること
+- rails ecサイト　商品詳細機能
+# 学習時間
+- 3日、４日,５日10h
+- 累計:2１2.5h
