--- a/2023/03/08.md
+++ b/2023/03/08.md
@@ -3,7 +3,7 @@
 - 商品詳細機能作成
 - Herokuデプロイ
 # わかったこと
-- コントローラーでsql文で絞って、任意の値を取得できる
+- sql文で絞って、任意の値を取得できる
 - Heroku設定からデプロイまでの流れ
 # 次やること
 - rails ecサイト　カート機能実装
