--- a/2023/04/13.md
+++ b/2023/04/13.md
@@ -1,7 +1,7 @@
 # 取り組んだ課題
 - Rails チェックアウト機能実装
 # わかったこと
-- if save　　else　でrender　templete: 'ファイル名'でvalidationエラーを日本語で表示できる
+- if save　　　else　render　templete: 'ファイル名'で validationエラーを日本語で表示できる
 - メール送信したあとはsesstonをdestroyしてreset_sessionするとsession情報を削除できる
 # 次やること
 - Rails ecサイト チェックアウト機能実装　購入時にflashメッセージを表示　　　メール送信本番環境実装
