--- a/2023/04/13.md
+++ b/2023/04/13.md
@@ -1,10 +1,12 @@
 # 取り組んだ課題
 - Rails チェックアウト機能実装
 # わかったこと
-- if save　　　else　render　templete: 'ファイル名'で validationエラーを日本語で表示できる
-- メール送信したあとはsesstonをdestroyしてreset_sessionするとsession情報を削除できる
+- <% flash.each do |key, msg| %>
+      <div class="alert alert-<%= key %>">
+        <%= msg %> をlayoutのaplication.htmlに記述するとどこでもflashメッセージが使える
+- Mailerはクラス名とview名を同じにすること
 # 次やること
-- Rails ecサイト チェックアウト機能実装　購入時にflashメッセージを表示　　　メール送信本番環境実装
+- Rails ecサイト チェックアウト機能実装　　メール送信本番環境実装
 # 学習時間
-- 4月11日~4月13日:4h
-- 累計:329h
+- 4月14日:2h
+- 累計:331h
