--- a/2023/04/13.md
+++ b/2023/04/13.md
@@ -1,5 +1,5 @@
 # 取り組んだ課題
-- Rails チェックアウト機能実装
+- Rails チェックアウト機能実装  flashメッセージ表示。メール機能実装
 # わかったこと
 - <% flash.each do |key, msg| %>
       <div class="alert alert-<%= key %>">
