--- a/2023/04/13.md
+++ b/2023/04/13.md
@@ -1,9 +1,11 @@
 # 取り組んだ課題
 - Rails チェックアウト機能実装  flashメッセージ表示。メール機能実装
 # わかったこと
-- <% flash.each do |key, msg| %>
+- ```<% flash.each do |key, msg| %>
       <div class="alert alert-<%= key %>">
-        <%= msg %> をlayoutのaplication.htmlに記述するとどこでもflashメッセージが使える
+        <%= msg %>
+   ```
+   をlayoutのaplication.htmlに記述するとどこでもflashメッセージが使える
 - Mailerはクラス名とview名を同じにすること
 # 次やること
 - Rails ecサイト チェックアウト機能実装　　メール送信本番環境実装
