--- a/2023/04/29.md
+++ b/2023/04/29.md
@@ -2,7 +2,7 @@
 - プロモーションコード機能
 # わかったこと
 - rake　ファイル名:task名　で実行ができ、プロモーションコードを10個生成できた
-- find_by 、whereの使い方 
+- find_byは最初に条件に一致したカラムを返し 、whereでは条件に一致した全てのカラムを含むデータを返す
 # 次やること
 - Rails ecサイト プロモーションコード実装
 # 学習時間
