--- a/2023/05/02.md
+++ b/2023/05/02.md
@@ -1,10 +1,10 @@
 # 取り組んだ課題
-- プロモーションコード機能
+- プロモーションコード機能　viewに割引額と合計金額を表示
 # わかったこと
 - present?はblank?でないオブジェクトに対してtureを返す
 - && でand条件を記述できる
 # 次やること
-- Rails ecサイト プロモーションコード実装
+- Rails ecサイト プロモーションコード実装 　エラーを表示
 # 学習時間
 - 2h
 - 累計:366h
