--- a/2023/08/15.md
+++ b/2023/08/15.md
@@ -1,7 +1,7 @@
 # 取り組んだ課題
 - Rails Twitterクローン メッセージ機能  メッセージルーム作成
 # わかったこと
-- room_userモデルにroommate_idを作成して、、メッセージルールに結びつくメンバーを作成できた
+- room_userモデルにroommate_idを作成して、、メッセージルームに結びつくメンバーを作成できた
 - `redirect_to "/rooms/#{@room.id}"` でshowページに遷移できる
 # 次やること
 - Rails Twitterクローン　メッセージ機能　　メッセージ送信機能
