--- a/2023/08/29.md
+++ b/2023/08/29.md
@@ -5,7 +5,7 @@
 - メール認証失敗の時は逆にconfirmed_at をnilにすればいい
 - params: { user: { email:user.email, password: user.password } }　モデルのパラメータを渡せれる
 # 次やること
-- RSpec自動テスト課題
+- RSpec自動テスト課題　システムテスト
 # 学習時間
 - 28,29: 7h
 - 学習時間　: 677h
