--- a/2023/09/14.md
+++ b/2023/09/14.md
@@ -1,1 +1,13 @@
-as
+# 取り組んだ課題
+-  JS上級課題　Udemy視聴
+-  鬼滅の刃API課題　一覧表示
+# わかったこと
+- awaitを使うとPromiseより記述がシンプルになり、直感的でわかりやすい
+- fetchは、モダンなJavaScriptでネットワークリクエストを行うためのAPI
+- for...ofループは、iterable（反復可能）なオブジェクトの要素を順番に繰り返し処理する
+# 次やること
+- JS上級課題　　鬼滅API　　画像表示　ラジオボタン作成
+# 学習時間
+- 本日: 4h
+- 学習時間　: 73８h
+
