--- a/2023/09/25.md
+++ b/2023/09/25.md
@@ -1,13 +1,13 @@
 # 取り組んだ課題
 - Reactに入門した人のためのもっとReactが楽しくなるステップアップコース完全版 Udemy
-- React ToDoリスト 追加、削除、チェックボックス
+- React ToDoリスト 追加、削除、チェックボックス機能実装
 # わかったこと
 Atomic Design
 - 各要素に一意のidを付与しないとエラーとなる
 - useEffectは、第二引数として渡せる配列（依存配列）に変数を指定することで、その変数が変更された時だけ useEffect を実行するように制御できる
 - 配列操作はコピーしたものに対して行う
 # 次やること
-- React ToDoリスト　編集　css装飾
+- React ToDoリスト　編集機能実装　css装飾
 # 学習時間
 - 本日: ２３、２４．２５：　10h
 - 学習時間　: 779h
