--- a/2023/10/01.md
+++ b/2023/10/01.md
@@ -1,2 +1,37 @@
+# 取り組んだ課題
+- webセキュリティ
+# わかったこと
+- CORS オリジン間のリソース共有
+  - オリジン＝スキーム(プロトコル) + ドメイン＋ポート番号
+  - ブラウザは「[同一生成元ポリシー(Same-Origin Policy)](https://www.tohoho-web.com/ex/same-origin-policy.html)」という仕組みを実装し、異なるオリジンのリソースへのアクセスに制約をかけている。CORS (Cross-Origin Resource Sharing)は、この制約を一部解除し、異なるオリジン間でリソースを共有するための仕組み
 
-dsfa
+- SQLインジェクション
+  - webサーバー攻撃
+  - 不正な文字列挿入によるSQL改ざん　ー＞　不正な命令実行
+  - データベース操作をするSQLを外部から意図的に改ざんすることでデータベースに不正な命令を実行させたり、情報を抜き取ったりするサーバー攻撃手法
+☞　プログラムの内部的なエラーメッセージを画面に入力させないようにする
+☞ SQL 文の組み立ては全てプレースホルダで実装する。
+  - SQL文の中で変動する箇所には必ずプレースホルダーを使う。プレースホルダーを使って指定しておけばその部分はあくまで「値」として処理される。要は「（仮）」みたいなもの。
+**正式な値が入るまで一時的に場所を確保しておくために入れておく値**が「プレースホルダ」。
+プレースホルダーはカラム名と同じ名前にしておくとわかりやすい
+1. 変動箇所を「:で始まる代替文字列」で指定
+2. ☞　適切な権限を設定する
+
+- **XSS (Cross Site Scripting)　クロスサイト・スクリプティング**
+  - webサーバー攻撃　
+  - ウェブアプリケーションにスクリプトを埋め込むことが可能な脆弱性がある場合、これを悪用した攻撃により、利用者のブラウザ上で不正なスクリプトが実行されてしまう可能性がある。
+☞ 不正なデータを受け付けないようにする、バリデーション
+- 出力時にエスケープ処理を施す
+☞ URL を出力するときは、「http://」や 「https://」で始まる URL のみを許可する
+  - 被害例は、Cookie 内のセッション情報を抜き取られて不正ログインを行われる、など。
+
+- **CSRF (Cross-Site Request Forgeries)クロスサイト・リクエスト・フォージェリ**
+  - Web アプリケーションのユーザーが、意図しない処理を **Web アプリケーション (Web Server)** 上で実行される脆弱性。ログイン状態のユーザーに対して、メールやSNS等を利用して不正なリンクを踏ませる。
+  - 処理の実行前にパスワード認証を行う、ワンタイムパスワード
+  - 被害例は、本来はログインしたユーザーしか実行できない記事の投稿、決済処理を勝手にされる、など。
+# 次やること
+- webセキュリティ　続き
+# 学習時間
+- 本日: 4h
+- 学習時間　: 812h
+
