--- a/2023/11/04.md
+++ b/2023/11/04.md
@@ -8,6 +8,36 @@
     navigate(-1);
   };
 ```
+### mapとforEachの違い
+forEachは要素に対して単に処理を実行するメソッドである一方、mapは戻り値として配列データを取得するメソッド
+```js
+const arr = [1, 2, 3, 4, 5];
+
+// forEachの場合
+const forEachResult = arr.forEach(value => {
+  return value * 2;
+});
+console.log(forEachResult); // undefined
+
+// mapの場合
+const mapResult = arr.map(value => {
+  return value * 2;
+});
+console.log(mapResult); // [2, 4, 6, 8, 10]
+```
+
+### Object.keys() 
+Object.keys() メソッドは、指定されたオブジェクトが持つプロパティの 名前の配列を、通常のループで取得するのと同じ順序で返す
+```js
+const object1 = {
+  a: 'somestring',
+  b: 42,
+  c: false,
+};
+
+console.log(Object.keys(object1));
+// Expected output: Array ["a", "b", "c"]
+```
  navigate は、宛先 URL を引数として受け取る関数。 -1 を引数に与えると前のページに戻る。
 ## Rails
 関連付けのモデルをネストすればデータを取得できる。
