--- a/2023/11/05.md
+++ b/2023/11/05.md
@@ -27,7 +27,7 @@ reader.onload = (evt) => {
 ```
 6.状態を更新したり、など任意の処理が実行される
 ### ?
-オプショナルチェーン (?.) を使用すると、currentUser や currentUser.profile が undefined の場合に undefined のプロパティにアクセスしようとしてエラーが発生するのを防ぎ、代わりに undefined を返す。
+オプショナルチェーン (?.) を使用すると、 undefined の場合に undefined のプロパティにアクセスしようとしてエラーが発生するのを防ぎ、代わりに undefined を返す。
 
 
 # 次やること
